--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         />
         <div class="container">
           <div class="stand_out__text">
-            <h2 class="stand_out__h1">Stand out to the right audience</h2>
+            <h2>Stand out to the right audience</h2>
             <p class="stand_out__info">
               Using a collaborative formula of designers, researchers,
               photographers, videographers, and copywriters, we’ll build and
@@ -104,6 +104,9 @@
           </p>
         </div>
       </div>
+    </section>
+    <section class="testimonials">
+      <h2>Client testimonials</h2>
     </section>
 
     Client testimonials We put our trust in Sunnyside and they delivered, making
