--- a/index.html
+++ b/index.html
@@ -107,14 +107,38 @@
     </section>
     <section class="testimonials">
       <h2>Client testimonials</h2>
+      <div class="testimonials__content">
+        <div class="testimonial container">
+          <img src="/public/images/image-emily.jpg" alt="Customer-Emily" />
+          <p>
+            We put our trust in Sunnyside and they delivered, making sure our
+            needs were met and deadlines were always hit.
+          </p>
+          <h3>Emily.R</h3>
+          <span>Marketing Director</span>
+        </div>
+        <div class="testimonial container">
+          <img src="/public/images/image-thomas.jpg" alt="Customer-Thomas" />
+          <p>
+            Sunnyside’s enthusiasm coupled with their keen interest in our
+            brand’s success made it a satisfying and enjoyable experience.
+          </p>
+          <h3>Thomas.S</h3>
+          <span>Chief Operating Officer</span>
+        </div>
+        <div class="testimonial container">
+          <img src="/public/images/image-jennie.jpg" alt="Customer-Jennie" />
+          <p>
+            Incredible end result! Our sales increased over 400% when we worked
+            with Sunnyside. Highly recommended!
+          </p>
+          <h3>Jennie.F</h3>
+          <span>Business Owner</span>
+        </div>
+      </div>
     </section>
+    <section class=""></section>
 
-    Client testimonials We put our trust in Sunnyside and they delivered, making
-    sure our needs were met and deadlines were always hit. Emily R. Marketing
-    Director Sunnyside’s enthusiasm coupled with their keen interest in our
-    brand’s success made it a satisfying and enjoyable experience. Thomas S.
-    Chief Operating Officer Incredible end result! Our sales increased over 400%
-    when we worked with Sunnyside. Highly recommended! Jennie F. Business Owner
     About Services Projects Contact
   </body>
 </html>
