Fix: Logo, Favicon and Arrow Img links

--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/images/favicon-32x32.png"
-    />
+
     <title>Frontend Mentor | Sunnyside agency landing page</title>
 
     <!-- Feather Icons -->
@@ -21,9 +16,7 @@
     <section class="hero flex flex-col items-center">
       <div class="container padding-x flex flex-col">
         <header class="header flex justify-between items-center">
-          <a href="/"
-            ><img class="header__logo" src="/images/logo.svg" alt="logo"
-          /></a>
+          <a href="/"><img class="header__logo" src="" alt="logo" /></a>
           <nav class="navbar">
             <ul class="mobile__nav">
               <li>
@@ -64,11 +57,7 @@
 
         <div class="hero__text text">
           <h1 class="text__title">WE ARE CREATIVES</h1>
-          <img
-            class="text__arrow_down"
-            src="/images/icon-arrow-down.svg"
-            alt="arrow-down"
-          />
+          <img class="text__arrow_down" src="" alt="arrow-down" />
         </div>
       </div>
     </section>
