--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <body>
     <!-- Hero Section  -->
 
-    <section class="hero flex flex-col items-center">
+    <section class="hero flex flex-col items-center container padding-y">
       <div class="container padding-x flex flex-col">
         <header class="header flex justify-between items-center">
           <a href="/"><img class="header__logo" src="" alt="logo" /></a>
@@ -97,7 +97,7 @@
 
     <!-- Services Section -->
 
-    <section class="services">
+    <section class="services flex flex-col container">
       <div class="service graphic-design">
         <div class="service__text">
           <h2 class="service__title">Graphic design</h2>
@@ -123,7 +123,7 @@
 
     <section class="testimonials">
       <h2>Client testimonials</h2>
-      <div class="testimonials__content">
+      <div class="testimonials__content container">
         <div class="testimonial container padding-x">
           <img src="/images/image-emily.jpg" alt="Customer-Emily" />
           <p>
@@ -165,7 +165,7 @@
 
     <!-- Footer -->
 
-    <footer class="footer">
+    <footer class="footer container">
       <div class="footer__logo">
         <svg width="124" height="24" xmlns="http://www.w3.org/2000/svg">
           <path
@@ -181,16 +181,16 @@
       </div>
       <div class="footer__socials">
         <a href="#"
-          ><img src="/images/icon-facebook.svg" alt="icon-facebook"
+          ><img src="" class="social__icon_fb" alt="icon-facebook"
         /></a>
         <a href="#"
-          ><img src="/images/icon-instagram.svg" alt="icon-instagram"
+          ><img src="" class="social__icon_insta" alt="icon-instagram"
         /></a>
         <a href="#"
-          ><img src="/images/icon-twitter.svg" alt="icon-twitter"
+          ><img src="" class="social__icon_tw" alt="icon-twitter"
         /></a>
         <a href="#"
-          ><img src="/images/icon-pinterest.svg" alt="icon-pinterest"
+          ><img src="" class="social__icon_pi" alt="icon-pinterest"
         /></a>
       </div>
     </footer>
