Change: Updated Readme file and fixed broken links

--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
       <h2>Client testimonials</h2>
       <div class="testimonials__content container">
         <div class="testimonial container padding-x">
-          <img src="/images/image-emily.jpg" alt="Customer-Emily" />
+          <img src="" id="emily" alt="Customer-Emily" />
           <p>
             We put our trust in Sunnyside and they delivered, making sure our
             needs were met and deadlines were always hit.
@@ -134,7 +134,7 @@
           <span>Marketing Director</span>
         </div>
         <div class="testimonial container padding-x">
-          <img src="/images/image-thomas.jpg" alt="Customer-Thomas" />
+          <img src="" id="thomas" alt="Customer-Thomas" />
           <p>
             Sunnyside’s enthusiasm coupled with their keen interest in our
             brand’s success made it a satisfying and enjoyable experience.
@@ -143,7 +143,7 @@
           <span>Chief Operating Officer</span>
         </div>
         <div class="testimonial container padding-x">
-          <img src="/images/image-jennie.jpg" alt="Customer-Jennie" />
+          <img src="" id="jennie" alt="Customer-Jennie" />
           <p>
             Incredible end result! Our sales increased over 400% when we worked
             with Sunnyside. Highly recommended!
