Update: Added Container for page

--- a/src/index.html
+++ b/src/index.html
@@ -13,155 +13,153 @@
   <body>
     <!-- Hero Section  -->
 
-    <section class="hero flex flex-col items-center container padding-y">
-      <div class="container padding-x flex flex-col">
-        <header class="header flex justify-between items-center">
-          <a href="/"><img class="header__logo" src="" alt="logo" /></a>
-          <nav class="navbar">
-            <ul class="mobile__nav">
-              <li>
-                <a href="#">About</a>
-              </li>
-              <li>
-                <a href="#">Services</a>
-              </li>
-              <li>
-                <a href="#">Projects</a>
-              </li>
-              <li>
-                <a class="button mobile_btn" href="#">Contact</a>
-              </li>
-            </ul>
-
-            <ul class="desktop__nav">
-              <li>
-                <a class="navbar__link" href="#">About</a>
-              </li>
-              <li>
-                <a class="navbar__link" href="#">Services</a>
-              </li>
-              <li>
-                <a class="navbar__link" href="#">Projects</a>
-              </li>
-              <li>
-                <a class="navbar__link button desktop__btn" href="#">Contact</a>
-              </li>
-            </ul>
-          </nav>
-          <i
-            class="header__nav_toggle"
-            id="navToggleBtn"
-            data-feather="menu"
-          ></i>
-        </header>
-
-        <div class="hero__text text">
-          <h1 class="text__title">WE ARE CREATIVES</h1>
-          <img class="text__arrow_down" src="" alt="arrow-down" />
-        </div>
-      </div>
-    </section>
-
-    <!-- Features Section -->
-
-    <section class="features">
-      <div class="transform container">
-        <img class="transform__img" src="" alt="egg" />
-        <div class="flex items-center justify-center flex-col padding-x">
-          <div class="transform__text">
-            <h2 class="transform__heading">Transform your brand</h2>
-            <p class="transform__info">
-              We are a full-service creative agency specializing in helping
-              brands grow fast. Engage your clients through compelling visuals
-              that do most of the marketing for you.
-            </p>
-            <a class="transform__link link" href="#">LEARN MORE</a>
+    <main>
+      <section class="hero flex flex-col items-center container padding-y">
+        <div class="container padding-x flex flex-col">
+          <header class="header flex justify-between items-center">
+            <a role="link" href="/"
+              ><img class="header__logo" src="" alt="logo"
+            /></a>
+            <nav class="navbar">
+              <ul class="mobile__nav">
+                <li>
+                  <a href="#">About</a>
+                </li>
+                <li>
+                  <a href="#">Services</a>
+                </li>
+                <li>
+                  <a href="#">Projects</a>
+                </li>
+                <li>
+                  <a class="button mobile_btn" href="#">Contact</a>
+                </li>
+              </ul>
+              <ul class="desktop__nav">
+                <li>
+                  <a class="navbar__link" href="#">About</a>
+                </li>
+                <li>
+                  <a class="navbar__link" href="#">Services</a>
+                </li>
+                <li>
+                  <a class="navbar__link" href="#">Projects</a>
+                </li>
+                <li>
+                  <a class="navbar__link button desktop__btn" href="#"
+                    >Contact</a
+                  >
+                </li>
+              </ul>
+            </nav>
+            <i
+              class="header__nav_toggle"
+              id="navToggleBtn"
+              data-feather="menu"
+            ></i>
+          </header>
+          <div class="hero__text text">
+            <h1 class="text__title">WE ARE CREATIVES</h1>
+            <img class="text__arrow_down" src="" alt="arrow-down" />
           </div>
         </div>
-      </div>
-      <div class="stand_out container">
-        <img class="stand_out__img" src="" alt="egg" />
-        <div class="flex items-center justify-center flex-col padding-x">
-          <div class="stand_out__text">
-            <h2 class="stand_out__heading">Stand out to the right audience</h2>
-            <p class="stand_out__info">
-              Using a collaborative formula of designers, researchers,
-              photographers, videographers, and copywriters, we’ll build and
-              extend your brand in digital places.
-            </p>
-            <a class="stand_out__link link" href="#">LEARN MORE</a>
+      </section>
+      <!-- Features Section -->
+      <section class="features">
+        <div class="transform container">
+          <img class="transform__img" src="" alt="egg" />
+          <div class="flex items-center justify-center flex-col padding-x">
+            <div class="transform__text">
+              <h2 class="transform__heading">Transform your brand</h2>
+              <p class="transform__info">
+                We are a full-service creative agency specializing in helping
+                brands grow fast. Engage your clients through compelling visuals
+                that do most of the marketing for you.
+              </p>
+              <a class="transform__link link" href="#">LEARN MORE</a>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
-
-    <!-- Services Section -->
-
-    <section class="services flex flex-col container">
-      <div class="service graphic-design">
-        <div class="service__text">
-          <h2 class="service__title">Graphic design</h2>
-          <p>
-            Great design makes you memorable. We deliver artwork that
-            underscores your brand message and captures potential clients’
-            attention.
-          </p>
+        <div class="stand_out container">
+          <img class="stand_out__img" src="" alt="egg" />
+          <div class="flex items-center justify-center flex-col padding-x">
+            <div class="stand_out__text">
+              <h2 class="stand_out__heading">
+                Stand out to the right audience
+              </h2>
+              <p class="stand_out__info">
+                Using a collaborative formula of designers, researchers,
+                photographers, videographers, and copywriters, we’ll build and
+                extend your brand in digital places.
+              </p>
+              <a class="stand_out__link link" href="#">LEARN MORE</a>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="service photography">
-        <div class="service__text">
-          <h2 class="service__title">Photography</h2>
-          <p>
-            Increase your credibility by getting the most stunning, high-quality
-            photos that improve your business image.
-          </p>
+      </section>
+      <!-- Services Section -->
+      <section class="services flex flex-col container">
+        <div class="service graphic-design">
+          <div class="service__text">
+            <h2 class="service__title">Graphic design</h2>
+            <p>
+              Great design makes you memorable. We deliver artwork that
+              underscores your brand message and captures potential clients’
+              attention.
+            </p>
+          </div>
         </div>
-      </div>
-    </section>
-
-    <!-- Testimonials Section -->
-
-    <section class="testimonials">
-      <h2>Client testimonials</h2>
-      <div class="testimonials__content container">
-        <div class="testimonial container padding-x">
-          <img src="" id="emily" alt="Customer-Emily" />
-          <p>
-            We put our trust in Sunnyside and they delivered, making sure our
-            needs were met and deadlines were always hit.
-          </p>
-          <h3>Emily.R</h3>
-          <span>Marketing Director</span>
+        <div class="service photography">
+          <div class="service__text">
+            <h2 class="service__title">Photography</h2>
+            <p>
+              Increase your credibility by getting the most stunning,
+              high-quality photos that improve your business image.
+            </p>
+          </div>
         </div>
-        <div class="testimonial container padding-x">
-          <img src="" id="thomas" alt="Customer-Thomas" />
-          <p>
-            Sunnyside’s enthusiasm coupled with their keen interest in our
-            brand’s success made it a satisfying and enjoyable experience.
-          </p>
-          <h3>Thomas.S</h3>
-          <span>Chief Operating Officer</span>
+      </section>
+      <!-- Testimonials Section -->
+      <section class="testimonials">
+        <h2>Client testimonials</h2>
+        <div class="testimonials__content container">
+          <div class="testimonial container padding-x">
+            <img src="" id="emily" alt="Customer-Emily" />
+            <p>
+              We put our trust in Sunnyside and they delivered, making sure our
+              needs were met and deadlines were always hit.
+            </p>
+            <h3>Emily.R</h3>
+            <span>Marketing Director</span>
+          </div>
+          <div class="testimonial container padding-x">
+            <img src="" id="thomas" alt="Customer-Thomas" />
+            <p>
+              Sunnyside’s enthusiasm coupled with their keen interest in our
+              brand’s success made it a satisfying and enjoyable experience.
+            </p>
+            <h3>Thomas.S</h3>
+            <span>Chief Operating Officer</span>
+          </div>
+          <div class="testimonial container padding-x">
+            <img src="" id="jennie" alt="Customer-Jennie" />
+            <p>
+              Incredible end result! Our sales increased over 400% when we
+              worked with Sunnyside. Highly recommended!
+            </p>
+            <h3>Jennie.F</h3>
+            <span>Business Owner</span>
+          </div>
         </div>
-        <div class="testimonial container padding-x">
-          <img src="" id="jennie" alt="Customer-Jennie" />
-          <p>
-            Incredible end result! Our sales increased over 400% when we worked
-            with Sunnyside. Highly recommended!
-          </p>
-          <h3>Jennie.F</h3>
-          <span>Business Owner</span>
-        </div>
-      </div>
-    </section>
-
-    <!-- Image Gallery -->
-
-    <section class="image-gallery container">
-      <img id="milk-bottles" src="" alt="milk-bottles" />
-      <img id="orange" src="" alt="orange" />
-      <img id="ice-cream-cone" src="" alt="ice-cream-cone" />
-      <img id="sugar-cubes" src="" alt="sugar-cubes" />
-    </section>
+      </section>
+      <!-- Image Gallery -->
+      <section class="image-gallery container">
+        <img id="milk-bottles" src="" alt="milk-bottles" />
+        <img id="orange" src="" alt="orange" />
+        <img id="ice-cream-cone" src="" alt="ice-cream-cone" />
+        <img id="sugar-cubes" src="" alt="sugar-cubes" />
+      </section>
+    </main>
 
     <!-- Footer -->
 
